[metadata]
name = pongwall_server
description = PongWall Server Prototype
version = 0.0.1
; url =

[options]
python_requires = ~=3.6
setup_requires =
  setuptools >= 40.6
  pip >= 10
packages = find:
zip_safe: false
scripts =
install_requires =
  numpy
  pyserial
  imageio

[options.extras_require]
tests =
  pytest
  pytest-cov
  black
  pylint
  mypy
  isort

[options.entry_points]
console_scripts =
#  foo

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

# Global options:

[mypy]
python_version = 3.8
warn_unused_configs = True
warn_redundant_casts = True

# Per-module options:
[mypy-pongwall_server.*]
disallow_any_unimported = False
disallow_any_decorated = True
disallow_any_generics = True
disallow_subclassing_any = False
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
warn_return_any = True
warn_unused_ignores = True
no_implicit_optional = True
strict_optional = True

[mypy-tests.*]
ignore_errors = True

; [mypy-setuptools.*]
; ignore_missing_imports = True
